--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "concurrently --names 'DB,FRONTEND' -c 'bgBlue.bold,bgMagenta.bold' 'npm run server' 'npm run serve'",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "server": "json-server db.json"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "concurrently": "^7.2.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.16",
