--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "concurrently --names 'DB,FRONTEND' -c 'bgBlue.bold,bgMagenta.bold' 'npm run server' 'npm run serve'",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "json-server db.json",
+    "start": "concurrently --names 'DB,FRONTEND' -c 'bgBlue.bold,bgMagenta.bold' 'npm run server' 'npm run serve'"
   },
   "dependencies": {
     "axios": "^0.27.2",
